--- a/src/ToDo.Mcp/ToDo.Mcp.csproj
+++ b/src/ToDo.Mcp/ToDo.Mcp.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.2.0-preview.3" />
+  </ItemGroup>
+
 </Project>
